@@ -5,9 +5,10 @@ News
 ---------------------------------------------------------
 
 Version 0.3-5
+  * In `plotxc`, now chops off long tails for scatterplot/2-d hisotogram.
   * pass plotting parameters for models from top-level `ceplot` call. See
     parameter `modelpar`.
-  * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.  
+  * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.
 
 Version 0.3-4 2016-08-04
   * fixed incorrect parameter names in demo files.
